# casa-abbreviations-and-acronyms

./: LICENCE  README.md  casa-abbreviations-and-acronyms.cabal  casa-abbreviations-and-acronyms.nix  changelog.md  default.nix  flake.nix
ci/: ci.nix  jobsets.json  jobsets.nix
etc/: AbbreviationsAndAcronymsGenerate.hs
src/Data/Aviation/Casa/: AbbreviationsAndAcronyms.hs
src/executable/: Main.hs
src/pre-process/: AbbreviationsAndAcronymsGenerate.hs  Main.hs
