-- documentation, see http://haskell.org/cabal/users-guide/

name:                  casa-abbreviations-and-acronyms
version:               0.0.9
synopsis:              CASA Abbreviations and Acronyms
description:
  <<https://raw.githubusercontent.com/qfpl/assets/master/data61-transparent-bg.png>>
  .
  CASA Abbreviations and Acronyms
  .
  https://www.casa.gov.au/about-us/standard-page/aviation-abbreviations-and-acronyms
license:               BSD3
license-file:          LICENCE
author:                Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:            Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:             Copyright (C) 2018 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:              Aviation
build-type:            Simple
extra-source-files:    changelog.md
cabal-version:         >=1.10
homepage:              https://github.com/qfpl/casa-abbreviations-and-acronyms
bug-reports:           https://github.com/qfpl/casa-abbreviations-and-acronyms/issues
tested-with:           GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1

source-repository      head
  type:                git
  location:            git@github.com:qfpl/casa-abbreviations-and-acronyms.git

library
  exposed-modules:       Data.Aviation.Casa.AbbreviationsAndAcronyms.Acronym
                       , Data.Aviation.Casa.AbbreviationsAndAcronyms.Render
                       , Data.Aviation.Casa.AbbreviationsAndAcronyms.Render.Config
                       , Data.Aviation.Casa.AbbreviationsAndAcronyms.Render.Colours
                       , Data.Aviation.Casa.AbbreviationsAndAcronyms.Render.Score
                       , Data.Aviation.Casa.AbbreviationsAndAcronyms.Render.Spacing
                       , Data.Aviation.Casa.AbbreviationsAndAcronyms.Search

  build-depends:         base              >= 4.8     && < 5
                       , lens              >= 4.15    && < 4.20 || >= 5.0 && < 5.1
                       , containers        >= 0.5     && < 0.7
                       , fuzzy             >= 0.1.0.0 && < 0.2
                       , monoid-subclasses >= 1.1     && < 1.2
                       , wreq              >= 0.5     && < 0.6
                       , bytestring        >= 0.10    && < 0.12
                       , semialign         >= 1       && < 1.3
                       , these             >= 1.1     && < 1.2
                       , profunctors       >= 5.0     && < 6.0

  hs-source-dirs:      src/library

  default-language:    Haskell2010

  ghc-options:         -Wall

executable pre-process-casa-abbreviations-and-acronyms
  build-depends:         base
                       , wreq              >= 0.5     && < 0.6
                       , lens
                       , containers
                       , fuzzy
                       , monoid-subclasses
                       , wreq
                       , bytestring

  main-is:             Main.hs

  hs-source-dirs:      src/pre-process

  default-language:    Haskell2010

  ghc-options:         -Wall

executable casa-abbreviations-and-acronyms
  default-language:    Haskell2010

  hs-source-dirs:      src/executable

  main-is:             Main.hs

  build-depends:        base
                      , lens
                      , fuzzy
                      , optparse-applicative >= 0.13.2  && < 0.17
                      , casa-abbreviations-and-acronyms

  ghc-options:         -Wall
